[gd_scene load_steps=6 format=3 uid="uid://1d6j5t8fm50f"]

[ext_resource type="Texture2D" uid="uid://cjrjjx0j888b2" path="res://assets/player_ship.png" id="1_615gn"]
[ext_resource type="Script" path="res://player.gd" id="1_741hu"]
[ext_resource type="PackedScene" uid="uid://34etiyxaw00e" path="res://bullet.tscn" id="2_gajdo"]
[ext_resource type="PackedScene" uid="uid://b0vl51e27h8f1" path="res://explosion.tscn" id="4_jmbqw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2k3f6"]
radius = 32.0156

[node name="Player" type="RigidBody2D"]
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("1_741hu")
bullet_scene = ExtResource("2_gajdo")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_615gn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_2k3f6")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(50, 2.08165e-12)

[node name="GunColldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion" parent="." instance=ExtResource("4_jmbqw")]
visible = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunColldown" to="." method="_on_gun_colldown_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
